# bbknn

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
bbknn/: __init__.py  distance_matrix.py  matrix.py
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: README.md  benchmark.ipynb  benchmark2.ipynb  benchmark3-new-R-methods.ipynb  demo.ipynb  mouse-harmony.ipynb  pancreas-2-mnnCorrect.ipynb  pancreas-3-CCA.ipynb  pancreas-4-Scanorama.ipynb  pancreas-5-Harmony-kBET.ipynb  pancreas.ipynb  simulation.ipynb
examples/benchmark-times/: annoy.txt  bbknn.txt  cca.txt  conos.txt  faiss.txt  harmony.txt  mnn.txt  scanorama.txt  seurat3.txt
python_module/: setup.py
python_module/bbknn/: __init__.py
python_module/docs/: Makefile
python_module/docs/source/: conf.py
