[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bbknn"
authors = [{name = "Krzysztof Polanski, Jongeun Park", email = "kp9@sanger.ac.uk"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type="text/markdown"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "Cython",
    "scipy>=1.6.0",
    "numpy",
    "pandas",
    "annoy",
    "pynndescent",
    "umap-learn",
    "scikit-learn>=1.0.2",  # https://github.com/Teichlab/bbknn/issues/54
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/Teichlab/bbknn"
Documentation = "https://bbknn.readthedocs.io/en/latest/"
